--- a/HTML/Lab1/1.html
+++ b/HTML/Lab1/1.html
@@ -132,7 +132,7 @@
 </head>
 
 <body>
-    <div class="header"> <img src="../Session 1 - Lab/img/logo_site_share.png"></div>
+    <div class="header"> <img src="../Lab1/img/logo_site_share.png"></div>
     <div class="nav">
         <a href="">Thời sự</a>
         <a href="">Khoa học</a>
@@ -165,7 +165,7 @@
                         kết
                     </p>
                     <div class="picture">
-                        <img src="../Session 1 - Lab/img/img1.jpg"> Park Jeong-in bị hậu vệ Việt Nam cản phá trong trận hòa 1-1 trên sân Lokomotiv, Tashkent, Uzbekistan ngày 5/6. Ảnh: <i>Lâm Thỏa</i>
+                        <img src="../Lab1/img/img1.jpg"> Park Jeong-in bị hậu vệ Việt Nam cản phá trong trận hòa 1-1 trên sân Lokomotiv, Tashkent, Uzbekistan ngày 5/6. Ảnh: <i>Lâm Thỏa</i>
                     </div>
                     <p>Với thế trận chủ động, cầm bóng trên 70% và tung ra gần 20 cú dứt điểm, đến phút 64 Hàn Quốc mở tỷ số nhờ công tiền đạo Cho Young-wook. Nhưng phút 78 họ lâm vào thế mất người, vì Lee Jin-yong nhận thẻ vàng thứ hai sau pha phạm lỗi
                         với Nguyễn Văn Tùng. Chỉ còn 10 cầu thủ, các học trò của HLV Hwang lúng túng, và để Việt Nam chớp thời cơ gỡ hoà 1-1 từ cú sút một chạm của Vũ Tiến Long.</p>
@@ -186,28 +186,23 @@
                         </ul>
                     </div>
                     <div class="picture">
-                        <img src="../Session 1 - Lab/img/Lich-dau-VCk-U23-Chau-A-1-7523-5731-6041-1654572291.jpg" alt="">
+                        <img src="../Lab1/img/Lich-dau-VCk-U23-Chau-A-1-7523-5731-6041-1654572291.jpg" alt="">
                     </div>
                     <div class="end">Lâm Thỏa (từ Tashkent)</div>
                 </div>
             </div>
             <div class="canlayer Rsite">
                 <div class="img">
-                    <a href="https://vnexpress.net/khach-san-u23-viet-nam-luu-tru-tai-uzbekistan-4471829.html"><img src="../Session 1 - Lab/img/khach-san.jpg" title="Khách sạn U23 Việt Nam lưu trú tại Uzbekistan"></a>
+                    <a href="https://vnexpress.net/khach-san-u23-viet-nam-luu-tru-tai-uzbekistan-4471829.html"><img src="../Lab1/img/khach-san.jpg" title="Khách sạn U23 Việt Nam lưu trú tại Uzbekistan"></a>
                     <a href="https://vnexpress.net/khach-san-u23-viet-nam-luu-tru-tai-uzbekistan-4471829.html">Khách sạn U23 Việt Nam lưu trú tại Uzbekistan</a>
                 </div>
                 <div class="img">
-                    <a href="https://vnexpress.net/tuong-quan-truoc-tran-viet-nam-han-quoc-4472186.html"><img src="../Session 1 - Lab/img/Settop-Viet-Nam-Han-Quoc-jpeg_1654381159.jpg" title="Tương quan trước trận Việt Nam - Hàn Quốc"></a>
+                    <a href="https://vnexpress.net/tuong-quan-truoc-tran-viet-nam-han-quoc-4472186.html"><img src="../Lab1/img/Settop-Viet-Nam-Han-Quoc-jpeg_1654381159.jpg" title="Tương quan trước trận Việt Nam - Hàn Quốc"></a>
                     <a href="https://vnexpress.net/tuong-quan-truoc-tran-viet-nam-han-quoc-4472186.html">Tương quan trước trận Việt Nam - Hàn Quốc</a>
                 </div>
             </div>
         </div>
     </div>
-
-
-    <style>
-
-    </style>
 </body>
 
 </html>
