--- a/HTML/Session1/Assignment1/1.html
+++ b/HTML/Session1/Assignment1/1.html
@@ -39,11 +39,11 @@
             </div>
             <div class="content">
                 <audio controls>
-                    <source href="javascript:void(0);">
+                    <source src="https://acdn.dantri.com.vn/2022/6/7/20220607112301708/full_2.mp3">
                 </audio>
                 <p> <i>(Dân trí) - Trận mưa lớn kéo dài từ chiều 6/6 đến rạng sáng 7/6 trên địa bàn TP Sơn La đã khiến nhiều tuyến đường bị ngập sâu, người dân khẩn trương sơ tán, nhiều ô tô "bơi" trong nước.</i></p>
                 <video class="zoom" playsinline="playsinline" controls>
-                    <source src="blob:https://dantri.com.vn/9ead5728-446e-470d-8d21-1bd9307d8f60"><source>
+                    <source src="../Assignment1/VIDEO/Nước lũ dâng cao ngang người, ô tô _bơi_ ở phố núi Sơn La _ Báo Dân trí.mp4">
                 </video>
                 <p class="underimg"> <i>Mưa lớn kéo dài cả đêm, "phố núi" Sơn La đường ngập như sông (Video: Công an tỉnh Sơn La).</i></p>
                 <!-- <iframe src="https://dantri.com.vn/xa-hoi/nuoc-lu-dang-cao-ngang-nguoi-o-to-boi-o-pho-nui-son-la-20220607112301708.htm" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
