--- a/HTML/Session1/Assignment1/1.html
+++ b/HTML/Session1/Assignment1/1.html
@@ -38,6 +38,7 @@
 
             </div>
             <div class="content">
+                <audio src="https://acdn.dantri.com.vn/2022/6/7/20220607112301708/full_2.mp3" controls></audio>
                 <audio controls>
                     <source src="https://acdn.dantri.com.vn/2022/6/7/20220607112301708/full_2.mp3">
                 </audio>
