--- a/Session1AG.html.html
+++ b/Session1AG.html.html
@@ -6,7 +6,7 @@
     <script script nomodule src="https: // unkg .com / ionicons @ 5.5.2 / dist /ionicons/ionicons.js "></script>
 
     <title>Document</title>
-    <link rel="stylesheet" href="./1.css">
+    <link rel="stylesheet" href="./css/Session1AG.css.css">
 
 </head>
 
