--- a/AssignmentJS4.html
+++ b/AssignmentJS4.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="./css/AG4.css">
-    <title>AG4</title>
+    <title>AssignmentJS4</title>
 </head>
 
 <body>
