--- a/AssignmentJS4.html
+++ b/AssignmentJS4.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="stylesheet" href="./Ibs/bootstrap/css/bootstrap.css">
     <script src="./Ibs/bootstrap/js/bootstrap.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
@@ -20,7 +21,7 @@
     <section class="section">
         <div class=" container">
             <div class="row content">
-                <button type="button" class="btn-menu position-relative" data-bs-toggle="modal" data-bs-target="#myModal">
+                <button type="button" class="btn-menu" data-bs-toggle="modal" data-bs-target="#myModal">
                    <i class="fa-solid fa-bars fs-2" style="opacity:0.8;"></i>
                   </button>
                 <div class="modal" id="myModal">
